done with constructHaplotypeFromVariants, for now at least